<resources>
    <string name="app_name">SQLiteAPP</string>
    <string name="tvTitulo">Administrador de Usuarios</string>
    <string name="etDocumento">DOCUMENTO</string>
    <string name="etUsuario">USUARIO</string>
    <string name="etNombres">NOMBRES</string>
    <string name="etApellidos">APELLIDOS</string>
    <string name="etContrasena">CONTRASEÑA</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="btnActualizar">Actualizar</string>
    <string name="btnBuscar">Buscar</string>
    <string name="btnListarRegistros">Listar Todo</string>
</resources>