<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/tvTitulo"
        android:textAlignment="center"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/etDocumento"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/etDocumento"
        android:inputType="number"
        android:padding="5dp"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/etUsuario"
        android:inputType="text"
        android:padding="5dp"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/etNombres"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/etNombres"
        android:inputType="text"
        android:padding="5dp"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/etApellidos"
        android:inputType="text"
        android:padding="5dp"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/etContrasena"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/etContrasena"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textSize="20dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp">

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="registrarUsuario"
            android:text="@string/btnRegistrar"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buscarUsuario"
            android:text="@string/btnBuscar"
            android:textSize="16dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp">

        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="actualizarUsuario"
            android:text="@string/btnActualizar"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btnListarRegistros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="listarUsuarios"
            android:text="@string/btnListarRegistros"
            android:textSize="16dp" />

    </TableRow>

    <ListView
        android:id="@+id/lvLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

</LinearLayout>